# adc_cpp

./: .clang-format  .clang-tidy  .codespellrc  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  BUILD_PROFILING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  diocotron_theory.csv  environment.yml  pixi.toml  pyproject.toml  todo.md  tsan-suppressions.txt
bench/: CMakeLists.txt  common.hpp  frontend_CMakeLists.txt  frontend_bench.cpp  frontend_bench_romeo.py  frontend_cpp.cpp  operator_first_perf.py  plot_perf_campaign.py  profile_step.cpp  profile_transport_mbox.cpp  romeo_perf_cpu.sbatch  romeo_perf_frontends_cpu.sbatch  romeo_perf_gpu.sbatch  romeo_perf_mpicuda_master_halo.sbatch  romeo_perf_transport_mbox_cpu.sbatch  run_bench.sh  run_frontend.sh  run_scaling.sh  scaling_amr.cpp  scaling_step.cpp
bench/romeo_results_647780_647781/: perf_frontends_cpu_1f9fb4a_647780.csv  perf_phases_gpu_1f9fb4a_647781.csv  perf_scaling_gpu_1f9fb4a_647781.csv
bench/romeo_results_final_647780_647781_647815/: perf_phases_cpu_1f9fb4a_647780.csv  perf_scaling_cpu_1f9fb4a_647780.csv
bench/romeo_results_final_647780_647781_647815_647836_647848/: perf_frontends_cpu_pic_1f9fb4a_647815.csv  perf_frontends_cpu_pic_adde23b_647848.csv  perf_phases_transport_mbox_cpu_adde23b_647836.csv  perf_scaling_transport_mbox_cpu_adde23b_647836.csv
bench/romeo_results_frontends_dslkokkosfix_648034/: perf_frontends_cpu_pic_adde23b_dslkokkosfix3_648034.csv
bench/romeo_results_matrix_647857_647858/: matrix_cpu_0162d5f4a8_647857.jsonl  matrix_gpu_0162d5f4a8_647858.jsonl  perf_phases_matrix_0162d5f4a8_647857_647858.csv  perf_scaling_matrix_0162d5f4a8_647857_647858.csv
bench/romeo_results_mpi_v2_648114_648115/: mpicpu2_1d4cd25e25_648114.jsonl  mpicpu2_648114.out  mpigpu2_1d4cd25e25_648115.jsonl  mpigpu2_648115.out  perf_phases_mpi_v2_1d4cd25e25_648114_648115.csv  perf_scaling_mpi_v2_1d4cd25e25_648114_648115.csv
bench/romeo_results_transport_mbox_adde23b_647836/: transport_mbox_cpu_647836.err  transport_mbox_cpu_647836.out
docs/validation/: CMakeLists.txt  GH200_HYQMOM15.md  HEADER_PROVENANCE.md  compare_snap.cpp  diocotron_amr_gpu.cpp  diocotron_amr_mpi.sbatch  diocotron_gpu.cpp  diocotron_mpi.sbatch  make_brick_and_ic.py  mpi181.sbatch  parity181.sbatch
examples/: CMakeLists.txt  bench_amr.cpp  diocotron.cpp  diocotron_amr.cpp  diocotron_amr3.cpp  diocotron_column.cpp  diocotron_column_amr.cpp  diocotron_highorder.cpp  diocotron_mpi.cpp  diocotron_multipatch.cpp
examples/gpu/: CMakeLists.txt  advect_cuda.cu  advect_fab_kokkos.cpp  arena_kokkos.cpp  coupled_kokkos.cpp  diocotron_amr_kokkos.cpp  rhs_kokkos.cpp  two_fluid_ap_kokkos.cpp
examples/operator_modules/: predictor_corrector_operator_first.py
examples/spec3/: board_euler_poisson_lorentz.py  board_time_predictor_corrector.py  board_vs_operator_ir_equivalence.py  compile_library_so.py  custom_richardson_solver.py  external_cpp_riemann.py  hllc_capabilities_euler.py  invariant_generic.py  manual_vs_lib_predictor_corrector.py  multispecies_three_fluids.py  operator_first_same_problem.py  rate_bundle_collisions.py  scheduled_fields_subcycled_transport.py  stage_state_set_field_solve.py
examples/spec4/: adc_cases_style_driver.py  custom_moment_model.py  hyqmom15_model_only.py  lib_time_program.py  manual_time_program.py
examples/time_programs/: adams_bashforth2_program.py  condensed_schur_program.py  divergence_solve.py  forward_euler_program.py  matrix_free_solve.py  predictor_corrector_poisson_lorentz.py  rk4_program.py  ssprk2_program.py  ssprk3_program.py  strang_program.py
fuzz/: CMakeLists.txt  fuzz_box2d.cpp  fuzz_cluster.cpp  fuzz_dense_eig.cpp  fuzz_util.hpp
python/: CMakeLists.txt  amr_block_compressible.cpp  amr_block_compressible_hll.cpp  amr_block_compressible_hllc.cpp  amr_block_compressible_roe.cpp  amr_block_compressible_rusanov.cpp  amr_block_exb.cpp  amr_block_isothermal.cpp  amr_compiled_compressible.cpp  amr_compiled_compressible_hll.cpp  amr_compiled_compressible_hllc.cpp  amr_compiled_compressible_roe.cpp  amr_compiled_compressible_rusanov.cpp  amr_compiled_exb.cpp  amr_compiled_isothermal.cpp  amr_system.cpp  bindings.cpp  bindings_detail.hpp  init_amr.cpp  init_core.cpp  init_system.cpp  system.cpp  system_compressible.cpp  system_compressible_hll.cpp  system_compressible_hllc.cpp  system_compressible_roe.cpp  system_compressible_rusanov.cpp  system_exb.cpp  system_isothermal.cpp  system_isothermal_hll.cpp  system_isothermal_rusanov.cpp  system_polar.cpp  test_bindings.py  two_fluid_ap_solver.cpp
python/adc/: __init__.py  dsl.py  integrate.py  lib.py  library.py  model.py  moments.py  physics.py  time.py
python/pops/: __init__.py  _bootstrap.py  _capabilities.py  _version.py  descriptors.py  dsl.py  integrate.py  lib.py  library.py  math.py  (+5 more)
tests/: CMakeLists.txt  test_adaptive_multirate.cpp  test_advance_amr.cpp  test_advect.cpp  test_amr_aux_bz.cpp  test_amr_compiled_model.cpp  test_amr_composite_poisson.cpp  test_amr_composite_source_conservation.cpp  test_amr_condensed_schur_composite.cpp  test_amr_condensed_schur_source_stepper.cpp  test_amr_coupled_source_role_strict.cpp  test_amr_coupler.cpp  test_amr_coupler_mp.cpp  test_amr_diagnostics.cpp  test_amr_diffusion.cpp  test_amr_hierarchy.cpp  test_amr_imex_native.cpp  test_amr_layout_guard.cpp  test_amr_multiblock_compiled.cpp  test_amr_multiblock_coupled_source.cpp  test_amr_multiblock_imex.cpp  test_amr_multiblock_regrid_union.cpp  test_amr_multiblock_substeps.cpp  test_amr_multilevel.cpp  test_amr_multilevel_mf.cpp  test_amr_multilevel_multipatch.cpp  test_amr_multipatch.cpp  test_amr_native_loader.cpp  test_amr_positivity_floor.cpp  test_amr_potential.cpp  test_amr_reflux.cpp  test_amr_reflux_mf.cpp  test_amr_regrid_mpi_parity.cpp  test_amr_regrid_variable.cpp  test_amr_riemann_native.cpp  test_amr_seed_no_refine.cpp  test_amr_source_covered_cells.cpp  test_amr_spatial_parity.cpp  test_amr_stride_cadence.cpp  test_amr_system_bz_multibox.cpp  (+166 more)
(+1230 files in other folders)
